src/components/circleAnimation/styles.module.scss
.circleContainer {
  display: none;
  @media (min-width: 1440px) {
    display: block;
    position: absolute;
    top: 215px;
    left: calc(100% / 2 - 268px);
    width: 536px;
    height: 536px;
  }
}

.circle {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.number {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  cursor: pointer;
  user-select: none;
  font-weight: 400;
  font-size: 20px;
  line-height: 30px;
}

.circle_number {
  opacity: 0;
}

.number__inactive:hover .circle_number {
  opacity: 100;
}

.number__inactive {
  background: #42567a;
  width: 6px;
  height: 6px;
  pointer-events: unset;
  transition: all;
  transition-duration: 300ms;
}

.number__inactive:hover {
  width: 56px;
  height: 56px;
  color: #42567a;
  background: #ffffff;
  border: 1px #303e5880 solid;
}
.number__active {
  width: 56px;
  height: 56px;
  color: #42567a;
  border: 1px #303e5880 solid;
  pointer-events: none;
  background: #ffffff;
}

.name {
  position: absolute;
  right: 76px;
  top: 52px;
  margin: 0;
}

